# pydarknet

./: .gitignore  CMakeLists.txt  Makefile  README.md  harness.sh  run_tests.py  setup.py  unix_build.sh
_graveyard/: Makefile
_graveyard/data/labels/: make_labels.py
cfg/: yolo.cfg
pydarknet/: __init__.py  __main__.py  _pydarknet.py  pydarknet_helpers.py
src/: box.c  captcha.c  classifier.c  coco.c  coco_kernels.cu  compare.c  connected_layer.c  connected_layer.h  convolutional_layer.c  convolutional_layer.h  cpu_gemm.c  crop_layer.c  crop_layer.h  darknet.c  data.c  detection_layer.c  detection_layer.h  dice.c  dropout_layer.c  dropout_layer.h  im2col.c  imagenet.c  maxpool_layer.c  maxpool_layer.h  network.c  nightmare.c  parser.c  parser.h  pydarknet.c  pydarknet.cpp  pydarknet.h  server.c  swag.c  utils.c  writing.c  yolo-class.hpp  yolo.c  yolo.h  yolo_kernels.cu
yolo/: parser.py
